Added auto update checking

--- a/Wishlist-Client-Improved/res/values/strings.xml
+++ b/Wishlist-Client-Improved/res/values/strings.xml
@@ -7,5 +7,6 @@
         <item >UNKNOWN</item>
     </string-array>
     <string name="defaults">Change Default Instance</string>
+    <string name="update">Apply Update</string>
 
 </resources>
